--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@octokit/auth-basic": "^1.4.6",
+    "@octokit/rest": "^18.0.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-error-boundary": "^2.3.1",
+    "react-scripts": "3.4.3",
+    "recoil": "^0.0.10",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "proxy": "http://localhost:9000",
+  "devDependencies": {
+    "@types/styled-components": "^5.1.3",
+    "typescript": "^4.0.2"
   }
 }
