--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@koa/cors": "^3.1.0",
+    "@koa/router": "^9.4.0",
     "@octokit/auth-basic": "^1.4.6",
     "@octokit/rest": "^18.0.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "keycode-js": "^3.1.0",
+    "koa": "^2.13.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-error-boundary": "^2.3.1",
@@ -38,7 +42,14 @@
   },
   "proxy": "http://localhost:9000",
   "devDependencies": {
+    "@types/koa": "^2.11.4",
+    "@types/koa__cors": "^3.0.1",
+    "@types/koa__router": "^8.0.2",
+    "@types/node": "^14.6.4",
     "@types/styled-components": "^5.1.3",
-    "typescript": "^4.0.2"
+    "nodemon": "^2.0.4",
+    "prettier": "^2.1.1",
+    "ts-node": "^9.0.0",
+    "typescript": "^3.9.2"
   }
 }
