--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/react-router-dom": "^5.1.5",
     "keycode-js": "^3.1.0",
     "koa": "^2.13.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-error-boundary": "^2.3.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "recoil": "^0.0.10",
     "styled-components": "^5.1.1"
